fix: changed font-size of heading on small devices

--- a/styles.css
+++ b/styles.css
@@ -362,6 +362,7 @@ hr {
     display: flex;
     flex-direction: column;
     position: relative;
+    right: 80px;
     text-align: right;
   }
 
@@ -403,7 +404,7 @@ hr {
   .home__heading--one {
     color: rgb(39, 38, 38);
     font-family: 'Courier Prime', monospace;
-    font-size: 16px;
+    font-size: 20px;
 }
 
 
@@ -415,7 +416,7 @@ hr {
     }
     73.3333%,
     93.3333% {
-      width: 22.5ch;
+      width: 23.5ch;
     }
   }
   
@@ -428,7 +429,7 @@ hr {
     }
     39.9999%,
     59.9999% {
-      width: 24.5ch;
+      width: 25.5ch;
     }
   }
   
@@ -440,7 +441,7 @@ hr {
     }
     6.6666%,
     26.6666% {
-      width: 20.5ch;
+      width: 21.5ch;
     }
   }
 
@@ -520,7 +521,7 @@ hr {
 @media (min-width: 481px) and (max-width: 767px) {
   .home__heading--one {
     font-family: 'Courier Prime', monospace;
-    font-size: 16px;
+    font-size: 20px;
 }
 }
 
